@@ -82,7 +82,7 @@ The Node.js agent will automatically instrument the following modules to give yo
 |https://www.npmjs.com/package/memcached[memcached] |>=2.2.0  |Will instrument all commands.
 |https://www.npmjs.com/package/mongodb-core[mongodb-core] |>=1.2.19 <4 |Will instrument all queries.
 A lot of higher level MongoDB modules use mongodb-core,
-so those should be supported as well
+so those should be supported as well.
 |https://www.npmjs.com/package/mongodb[mongodb] |>=2.0.0 <3.3.0 |Supported via mongodb-core
 |https://www.npmjs.com/package/mongodb[mongodb] |^3.3.0 |Will instrument all queries
 |https://www.npmjs.com/package/mongojs[mongojs] |>=1.0.0 <2.7.0 |Supported via mongodb-core
